--- a/src/daft-warc/Cargo.toml
+++ b/src/daft-warc/Cargo.toml
@@ -24,7 +24,7 @@ tokio-stream = {workspace = true, features = ["io-util"]}
 tokio-util = {workspace = true}
 warc = "0.4.0"
 uuid = {version = "1.10.0", features = ["v4"]}
-
+flate2 = "1.1.0"
 [dev-dependencies]
 rstest = {workspace = true}
 
