Update dashboard import mechanism

--- a/daft_dashboard/pyproject.toml
+++ b/daft_dashboard/pyproject.toml
@@ -9,7 +9,7 @@ requires-python = ">=3.9"
 version = "0.1.0"
 
 [project.scripts]
-daft-dashboard = "daft_dashboard:cli"
+daft-dashboard = "daft_dashboard:_cli"
 
 [tool.maturin]
 features = ["python"]
