--- a/src/daft-warc/Cargo.toml
+++ b/src/daft-warc/Cargo.toml
@@ -2,6 +2,7 @@
 arrow2 = {workspace = true}
 chrono = {workspace = true}
 common-error = {path = "../common/error", default-features = false}
+common-runtime = {path = "../common/runtime", default-features = false}
 daft-compression = {path = "../daft-compression", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
@@ -10,6 +11,7 @@ daft-recordbatch = {path = "../daft-recordbatch", default-features = false}
 futures = {workspace = true}
 serde_json = {workspace = true}
 tokio = {workspace = true}
+tokio-stream = {workspace = true}
 tokio-util = {workspace = true}
 uuid = {version = "1.10.0", features = ["v4"]}
 
