--- a/src/daft-micropartition/Cargo.toml
+++ b/src/daft-micropartition/Cargo.toml
@@ -15,6 +15,7 @@ daft-parquet = {path = "../daft-parquet", default-features = false}
 daft-recordbatch = {path = "../daft-recordbatch", default-features = false}
 daft-scan = {path = "../daft-scan", default-features = false}
 daft-stats = {path = "../daft-stats", default-features = false}
+daft-warc = {path = "../daft-warc", default-features = false}
 dashmap = "6.1.0"
 futures = {workspace = true}
 parquet2 = {workspace = true}
