--- a/.github/workflows/benchmark-local-tpch.yml
+++ b/.github/workflows/benchmark-local-tpch.yml
@@ -23,6 +23,7 @@ jobs:
     name: Build and publish wheels if necessary
     if: ${{ inputs.daft_index_url == '' }}
     uses: ./.github/workflows/publish-dev-s3.yml
+    secrets: inherit
 
   benchmark:
     needs: build
