--- a/daft_dashboard/Cargo.toml
+++ b/daft_dashboard/Cargo.toml
@@ -4,7 +4,6 @@ chrono = {workspace = true, features = ["serde"]}
 clap = {version = "4.5.28", features = ["derive"]}
 http-body-util = "0.1"
 hyper = {features = ["full"], version = "1.6"}
-hyper-staticfile = "0.10.1"
 hyper-util = {features = ["tokio"], version = "0.1"}
 parking_lot = "0.12"
 pyo3 = {workspace = true, optional = true}
@@ -12,6 +11,7 @@ serde_json = "1.0"
 log.workspace = true
 serde.workspace = true
 tokio.workspace = true
+include_dir = "0.7.4"
 
 [features]
 python = ["dep:pyo3"]
