--- a/src/daft-dashboard/frontend/package.json
+++ b/src/daft-dashboard/frontend/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next build --no-optimize && touch out/.gitkeep",
     "build": "next build  && touch out/.gitkeep",
     "start": "next start",
-    "lint": "next lint --fix",
-    "move": "mv out ../../html"
+    "lint": "next lint --fix"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.3",
