build: bump rust toolchain version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -368,6 +368,7 @@ unused_async = "allow"
 unused_self = "allow"
 use-self = "deny"
 used_underscore_binding = "allow"  # REMOVE REMOVE
+# used_underscore_items = "allow"
 wildcard_imports = "allow"
 zero_sized_map_values = "allow"
 
