chore: move dashboard in to main project (#3909)
also renames `daft_dashboard` -> `daft-dashboard` for consistency




### Next 

- [ ] rewire the dashboard in to `dataframe.py` Reverting
https://github.com/Eventual-Inc/Daft/pull/3888
- [ ] minor cleanup with how dashboards are launched and shutdown.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -207,6 +207,10 @@ jobs:
         key: ${{ runner.os }}-integration-build
         cache-all-crates: 'true'
 
+    - uses: oven-sh/setup-bun@v2
+      with:
+        bun-version: latest
+
     # NOTE: we don't build with all the actual release optimizations to avoid hellish CI times
     - name: Build wheels
       run: maturin build --release --compatibility linux --out dist
@@ -687,6 +691,9 @@ jobs:
         key: ${{ runner.os }}-benchmark-build
         cache-all-crates: 'true'
         cache-provider: buildjet
+    - uses: oven-sh/setup-bun@v2
+      with:
+        bun-version: latest
     - uses: actions/setup-python@v5
       with:
         python-version: '3.12' # Codspeed requires Python 3.12
