--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -41,6 +41,9 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
+    - uses: oven-sh/setup-bun@v2
+      with:
+        bun-version: latest
     - run: pip install uv
     - run: uv pip install twine yq setuptools_scm
 
