--- a/.github/workflows/property-based-tests.yml
+++ b/.github/workflows/property-based-tests.yml
@@ -41,7 +41,9 @@ jobs:
       run: |
         pip install --upgrade pip
         pip install -r requirements-dev.txt
-
+    - uses: oven-sh/setup-bun@v2
+      with:
+        bun-version: latest
     - name: Build Rust Library
       run: |
         source activate
