--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
   "fsspec",
   "tqdm",
   "typing-extensions >= 4.0.0; python_version < '3.10'",
-  "importlib-metadata"
+  "importlib-metadata; python_version < '3.9'"
 ]
 description = "Distributed Dataframes for Multimodal Data"
 dynamic = ["version"]
