--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -43,6 +43,7 @@ nav:
     - Tutorials: resources/tutorials.md
     - Benchmarks: resources/benchmarks/tpch.md # Benchmarks can expand into a folder once we have more
     - Telemetry: resources/telemetry.md
+  - Spark Connect: spark_connect.md
   - Migration Guide:
     - Coming from Dask: migration/dask_migration.md
 - API Docs: api_docs/index.html
