--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -93,6 +93,11 @@ jobs:
         .\venv\Scripts\activate
         uv pip install -r requirements-dev.txt
 
+    - name: Install zlib (only ubuntu)
+      if: ${{ (runner.os == 'ubuntu-20.04') }}
+      run: |
+        sudo apt-get install zlib1g-dev
+
     - name: Override pyarrow
       if: ${{ (matrix.pyarrow-version) && (runner.os != 'Windows') }}
       run: uv pip install pyarrow==${{ matrix.pyarrow-version }}
