--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
   - Quickstart: quickstart.md
   - Core Concepts: core_concepts.md
   - Catalogs: catalogs.md
+  - Spark Connect: spark_connect.md
   - Distributed Computing: distributed.md
   - Advanced:
     - Managing Memory Usage: advanced/memory.md
