--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
   - Installation: install.md
   - Quickstart: quickstart.md
   - Core Concepts: core_concepts.md
+  - Sessions: sessions.md
   - Catalogs: catalogs.md
   - Spark Connect: spark_connect.md
   - Distributed Computing: distributed.md
