--- a/.github/workflows/benchmark-local-tpch.yml
+++ b/.github/workflows/benchmark-local-tpch.yml
@@ -20,7 +20,6 @@ env:
   AWS_REGION: us-west-2
 
   DAFT_ANALYTICS_ENABLED: "0"
-  UV_SYSTEM_PYTHON: 1
   PYTHON_VERSION: "3.9"
 
 jobs:
@@ -53,7 +52,7 @@ jobs:
         aws-region: ${{ env.AWS_REGION }}
         role-session-name: DaftLocalTpchGitHubWorkflow
     - name: Download TPC-H data (100SF)
-      run: aws s3 cp s3://eventual-dev-benchmarking-fixtures/uncompressed/tpch-dbgen/100_0/32/parquet /tmp/tpch-data --recursive
+      run: aws s3 cp s3://eventual-dev-benchmarking-fixtures/uncompressed/tpch-dbgen/100_0/32/parquet /tmp/tpch-data --recursive --no-progress
 
     - name: Install uv
       uses: astral-sh/setup-uv@v4
