cleanup of the dashboard build process

--- a/src/daft-dashboard/frontend/package.json
+++ b/src/daft-dashboard/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build  && touch out/.gitkeep",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint --fix"
   },
