--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -44,6 +44,7 @@ jobs:
     - uses: oven-sh/setup-bun@v2
       with:
         bun-version: latest
+      if: ${{ (inputs.os == 'macos') || (inputs.os == 'windows') }} # bun installed on linux in container during build step
     - run: pip install uv
     - run: uv pip install twine yq setuptools_scm
 
@@ -79,6 +80,7 @@ jobs:
       with:
         target: x86_64
         args: --profile release-lto --out dist
+
     - name: Build wheels - Linux x86
       if: ${{ (inputs.os == 'ubuntu') && (inputs.arch == 'x86_64') }}
       uses: messense/maturin-action@v1
@@ -87,7 +89,11 @@ jobs:
         manylinux: auto
         # only produce sdist for linux x86 to avoid multiple copies
         args: --profile release-lto --out dist --sdist
-        before-script-linux: yum -y install perl-IPC-Cmd
+        before-script-linux: |
+          yum -y install perl-IPC-Cmd
+          curl -fsSL https://bun.sh/install | bash
+          export BUN_INSTALL="$HOME/.bun"
+          export PATH="$BUN_INSTALL/bin:$PATH"
 
     - name: Build wheels - Linux aarch64
       if: ${{ (inputs.os == 'ubuntu') && (inputs.arch == 'aarch64') }}
@@ -98,7 +104,7 @@ jobs:
         # GCC 4.8.5 in manylinux2014 container doesn't support c11 atomic. This caused issues with the `ring` crate that causes TLS to fail
         container: messense/manylinux_2_24-cross:aarch64
         args: --profile release-lto --out dist
-        before-script-linux: export JEMALLOC_SYS_WITH_LG_PAGE=16
+        before-script-linux: export JEMALLOC_SYS_WITH_LG_PAGE=16 curl -fsSL https://bun.sh/install | bash export BUN_INSTALL="$HOME/.bun" export PATH="$BUN_INSTALL/bin:$PATH"
 
     - name: Build wheels - Mac aarch64
       if: ${{ (inputs.os == 'macos') && (inputs.arch == 'aarch64')  }}
