--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -44,6 +44,7 @@ jobs:
     - uses: oven-sh/setup-bun@v2
       with:
         bun-version: latest
+      if: ${{ (inputs.os == 'macos') || (inputs.os == 'windows') }} # bun installed on linux in container during build step
     - run: pip install uv
     - run: uv pip install twine yq setuptools_scm
 
@@ -75,37 +76,44 @@ jobs:
 
     - name: Build wheels - Mac and Windows x86
       if: ${{ ((inputs.os == 'macos') || (inputs.os == 'windows')) && (inputs.arch == 'x86_64')  }}
-      uses: messense/maturin-action@v1
+      uses: PyO3/maturin-action@v1
       with:
         target: x86_64
         args: --profile release-lto --out dist
+
     - name: Build wheels - Linux x86
       if: ${{ (inputs.os == 'ubuntu') && (inputs.arch == 'x86_64') }}
-      uses: messense/maturin-action@v1
+      uses: PyO3/maturin-action@v1
       with:
         target: x86_64
-        manylinux: auto
+        manylinux: 2_28
         # only produce sdist for linux x86 to avoid multiple copies
         args: --profile release-lto --out dist --sdist
-        before-script-linux: yum -y install perl-IPC-Cmd
+        before-script-linux: |
+          dnf install -y perl-IPC-Cmd
+          curl -fsSL https://bun.sh/install | bash
+          export BUN_INSTALL="$HOME/.bun"
+          export PATH="$BUN_INSTALL/bin:$PATH"
 
     - name: Build wheels - Linux aarch64
       if: ${{ (inputs.os == 'ubuntu') && (inputs.arch == 'aarch64') }}
-      uses: messense/maturin-action@v1
+      uses: PyO3/maturin-action@v1
       with:
         target: aarch64-unknown-linux-gnu
-        manylinux: auto
-        # GCC 4.8.5 in manylinux2014 container doesn't support c11 atomic. This caused issues with the `ring` crate that causes TLS to fail
-        container: messense/manylinux_2_24-cross:aarch64
+        manylinux: 2_28
         args: --profile release-lto --out dist
-        before-script-linux: export JEMALLOC_SYS_WITH_LG_PAGE=16
+        before-script-linux: |
+          export JEMALLOC_SYS_WITH_LG_PAGE=16
+          apt install -y unzip
+          curl -fsSL https://bun.sh/install | bash
+          export BUN_INSTALL="$HOME/.bun"
+          export PATH="$BUN_INSTALL/bin:$PATH"
 
     - name: Build wheels - Mac aarch64
       if: ${{ (inputs.os == 'macos') && (inputs.arch == 'aarch64')  }}
-      uses: messense/maturin-action@v1
+      uses: PyO3/maturin-action@v1
       with:
         target: aarch64
-        manylinux: auto
         args: --profile release-lto --out dist
       env:
         RUSTFLAGS: -Ctarget-cpu=apple-m1
