fix: nightly build and local tpch benchmark workflow (#3898)

--- a/.github/workflows/benchmark-local-tpch.yml
+++ b/.github/workflows/benchmark-local-tpch.yml
@@ -2,27 +2,32 @@ name: benchmark-local-tpch
 
 on:
   workflow_dispatch:
+    inputs:
+      daft_index_url:
+        description: The index URL of the Daft build to benchmark. If not provided, builds Daft off of the provided branch.
+        default: ""
+        required: false
   workflow_call:
     inputs:
       daft_index_url:
         description: The index URL of the Daft build to benchmark. If not provided, builds Daft off of the provided branch.
         type: string
-        default: ''
+        default: ""
         required: false
 
 env:
   DAFT_INDEX_URL: ${{ inputs.daft_index_url != '' && inputs.daft_index_url || format('https://d1p3klp2t5517h.cloudfront.net/builds/dev/{0}', github.sha) }}
   AWS_REGION: us-west-2
 
-  DAFT_ANALYTICS_ENABLED: '0'
-  UV_SYSTEM_PYTHON: 1
-  PYTHON_VERSION: '3.9'
+  DAFT_ANALYTICS_ENABLED: "0"
+  PYTHON_VERSION: "3.9"
 
 jobs:
   build:
     name: Build and publish wheels if necessary
     if: ${{ inputs.daft_index_url == '' }}
     uses: ./.github/workflows/publish-dev-s3.yml
+    secrets: inherit
 
   benchmark:
     needs: build
@@ -35,13 +40,9 @@ jobs:
     steps:
     - name: Mount local SSD to /tmp
       run: |
-        findmnt /tmp 1> /dev/null
-        code=$?
-        if [ $code -ne 0 ]; then
-            sudo mkfs.ext4 /dev/nvme0n1
-            sudo mount -t ext4 /dev/nvme0n1 /tmp
-            sudo chmod 777 /tmp
-        fi
+        sudo mkfs.ext4 /dev/nvme2n1
+        sudo mount -t ext4 /dev/nvme2n1 /tmp
+        sudo chmod 777 /tmp
     - uses: actions/checkout@v4
       with:
         submodules: true
@@ -49,13 +50,12 @@ jobs:
       uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-region: ${{ env.AWS_REGION }}
-        role-to-assume: ${{ secrets.ACTIONS_AWS_ROLE_ARN }}
         role-session-name: DaftLocalTpchGitHubWorkflow
     - name: Download TPC-H data (100SF)
-      run: aws s3 cp s3://eventual-dev-benchmarking-fixtures/uncompressed/tpch-dbgen/100_0/32/parquet /tmp/tpch-data --recursive
+      run: aws s3 cp s3://eventual-dev-benchmarking-fixtures/uncompressed/tpch-dbgen/100_0/32/parquet /tmp/tpch-data --recursive --no-progress
 
     - name: Install uv
-      uses: astral-sh/setup-uv@v4
+      uses: astral-sh/setup-uv@v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
     - name: Install Daft and dev dependencies
@@ -65,8 +65,9 @@ jobs:
         uv pip install gspread
     - name: Write service account secret file
       run: |
+        mkdir -p ~/.config/gspread
         cat << EOF > ~/.config/gspread/service_account.json
         ${{ secrets.GOOGLE_SHEETS_SERVICE_ACCOUNT }}
         EOF
     - name: Run benchmark and upload results to Google Sheets
-      run: python .github/ci-scripts/local_tpch.py
+      run: PYTHONPATH=. python .github/ci-scripts/local_tpch.py
