--- a/src/daft-writers/Cargo.toml
+++ b/src/daft-writers/Cargo.toml
@@ -1,4 +1,7 @@
 [dependencies]
+arrow2 = {workspace = true, features = [
+  "io_ipc_compression"
+]}
 common-daft-config = {path = "../common/daft-config", default-features = false}
 common-error = {path = "../common/error", default-features = false}
 common-file-formats = {path = "../common/file-formats", default-features = false}
