--- a/src/daft-shuffles/Cargo.toml
+++ b/src/daft-shuffles/Cargo.toml
@@ -4,6 +4,7 @@ common-runtime = {path = "../common/runtime", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-micropartition = {path = "../daft-micropartition", default-features = false}
 daft-recordbatch = {path = "../daft-recordbatch", default-features = false}
+daft-schema = {path = "../daft-schema", default-features = false}
 daft-writers = {path = "../daft-writers", default-features = false}
 futures = {workspace = true}
 pyo3 = {workspace = true, optional = true}
@@ -16,7 +17,8 @@ python = [
   "daft-dsl/python",
   "daft-writers/python",
   "daft-micropartition/python",
-  "daft-recordbatch/python"
+  "daft-recordbatch/python",
+  "daft-schema/python"
 ]
 
 [lints]
