--- a/src/daft-shuffles/Cargo.toml
+++ b/src/daft-shuffles/Cargo.toml
@@ -2,6 +2,7 @@
 common-error = {path = "../common/error", default-features = false}
 common-runtime = {path = "../common/runtime", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
+daft-io = {path = "../daft-io", default-features = false}
 daft-micropartition = {path = "../daft-micropartition", default-features = false}
 daft-recordbatch = {path = "../daft-recordbatch", default-features = false}
 daft-schema = {path = "../daft-schema", default-features = false}
@@ -15,10 +16,11 @@ python = [
   "dep:pyo3",
   "common-error/python",
   "daft-dsl/python",
-  "daft-writers/python",
+  "daft-io/python",
   "daft-micropartition/python",
   "daft-recordbatch/python",
-  "daft-schema/python"
+  "daft-schema/python",
+  "daft-writers/python"
 ]
 
 [lints]
